--- a/css/main.css
+++ b/css/main.css
@@ -8,169 +8,150 @@ body{
     font-family: 'Lato', sans-serif;
 }
 
-ul a{
+a{
     text-decoration: none;
+    color: inherit;
 }
 
-.menu {
-  position: fixed;
-  z-index: 2;
-  top: 50%;
-  text-align: center;
+a:hover{
+    text-decoration: none;
+    color: inherit;
 }
 
-.menu p{
-    width: 3em;
-    transform: rotate(-90deg) translateX(-1.5em);
-}
-
-.menu ul {
-  list-style: none;
-  padding: 0;
-}
-.menu li {
-  width: 5em;
-  height: 1.4em;
-  padding: 0.2em;
-  margin-top: 0.2em;
-  text-align: center;
-  border-top-right-radius: 0.5em;
-  border-bottom-right-radius: 0.5em;
-  transition: all 1s;
-  opacity: 0;
-  z-index: -1;
-}
-.menu:hover li {
-  opacity: 1;
-}
-/**
- * Add a pseudo element to cover the space
- * between the links. This is so the menu
- * does not lose :hover focus and disappear
- */
-.menu:hover ul::before {
-  position: absolute;
-  content: "";
-  width: 0;
-  height: 0;
-  display: block;
-  left: 50%;
-  top: -5.0em;
-  /**
-   * The pseudo-element is a semi-circle
-   * created with CSS. Top, bottom, and right
-   * borders are 6.5em (left being 0), and then
-   * a border-radius is added to the two corners
-   * on the right.
-   */
-  border-width: 6.5em;
-  border-radius: 0 7.5em 7.5em 0;
-  border-left: 0;
-  border-style: solid;
-  /**
-   * Have to have a border color for the border
-   * to be hoverable. I'm using a very light one
-   * so that it looks invisible.
-   */
-  border-color: rgba(0,0,0,0.01);
-  /**
-   * Put the psuedo-element behind the links
-   * (So they can be clicked on)
-   */
-  z-index: -1;
-  /**
-   * Make the cursor default so it looks like
-   * nothing is there
-   */
-  cursor: default;
-}
-.menu a {
-  color: white;
-  text-decoration: none;
-  /**
-   * This is to vertically center the text on the
-   * little tab-like things that the text is on.
-   */
-  line-height: 1.5em;
-}
-.menu a {
-  color: white;
-  text-decoration: none;
-}
-.menu ul {
-  transform: rotate(180deg) translateY(-2em);
-  transition: 1s all;
-}
-.menu:hover ul {
-  transform: rotate(0deg) translateY(-1em);
-}
-.menu li:hover {
-  color: greenyellow;
-  z-index: 10;
-}
-
-.menu li:nth-of-type(1) {
-  transform: rotate(-90deg);
-  position: absolute;
-  left: -1.2em;
-  top: -4.2em;
-}
-.menu li:nth-of-type(2) {
-  transform: rotate(-45deg);
-  position: absolute;
-  left: 2em;
-  top: -3em;
-}
-.menu li:nth-of-type(3) {
-  position: absolute;
-  left: 3.4em;
-  top: 0.3em;
-}
-.menu li:nth-of-type(4) {
-  transform: rotate(45deg);
-  position: absolute;
-  left: 2em;
-  top: 3.7em;
-}
-.menu li:nth-of-type(5) {
-  transform: rotate(90deg);
-  position: absolute;
-  left: -1.2em;
-  top: 5em;
-}
-
-.circle {
-  width: 400px;
-  height: 400px;
-  border-radius: 200px;
-  border: 2px solid #fff;
-  position: absolute;
-  left: -250px;
-}
-
-.title{
-    margin-top: 2em;
-    margin-left: 2em;
-    font-size: 2em;
+#topbar {
+    position: fixed;
+    z-index: 99;
+    padding: 1em 10rem;
     font-family: 'Gamja Flower', cursive;
+    font-size: 2rem;
+    font-weight: normal;
+    width: 100%;
+    line-height: 1em;
+    left: 0;
 }
 
-.container-fluid{
-    position: relative;
-    width: 100hw;
-    height: 100vh;
+#menu{
+    float: right;
+    font-weight: normal;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.close{
+  float: right;
+  width: 32px;
+  height: 32px;
+    cursor: pointer;
+}
+
+.close:before, .close:after {
+  float: right;
+  content: ' ';
+  height: 33px;
+  width: 2px;
+  background-color: #333;
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
 }
 
 #first{
-    background-color: lightgrey;
+    width: 100hw;
+    height: 100vh;
+    background-color: white;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700; 
+    font-size: 3em;
+}
+
+.hover_img {
+    position: absolute;
+    margin: auto 10rem;
+    height: 200px;
+    top: 50%;
+    transform: translateY(-100px);
+}
+
+.hover_img a{
+    position: relative;
+}
+
+.hover_img a span{
+    position: absolute;
+    display: none;
+    z-index: 99;
+}
+
+.hover_img a:hover span{
+    display: flex;
+}
+
+#helen{
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+}
+
+#helen:after{
+    content: '';
+    position: absolute;
+    bottom: 5px;
+    left: 10px;
+    right: -10px;
+    height: 13px;
+    width: 100%;
+    z-index: -1;
+    background:  #eeaa66;
+}
+
+.menuoverlay{
+    background-color: bisque;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    z-index: 100;
+    display: none;
+    padding: 2em;
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+ul{
+    list-style-type: none;
+    cursor: pointer;
+    max-width: fit-content;
+}
+
+li{
+    margin-bottom: 1rem;
 }
 
 #second{
     background-color: darkgrey;
+    background-color: seashell;
+    background-image: url("https://www.transparenttextures.com/patterns/beige-paper.png");
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
-body {
-  background: #000;
+
+.projImg{
+    width: 100%;
+    object-fit: contain;
+    border-radius: 1em;
+}
+
+#smith-container{
+     background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(221,221,221,1) 0.1%, #bbb 90% );
+}
+#smithsonian{
+    object-fit: contain;
+    height: 200px;
+    padding: 1em;
 }
 
 .arrow,
@@ -187,8 +168,8 @@ body {
   -webkit-transform: rotate(45deg);
   border-left: none;
   border-top: none;
-  border-right: 2px #fff solid;
-  border-bottom: 2px #fff solid;
+  border-right: 2px #000 solid;
+  border-bottom: 2px #000 solid;
 }
 
 .arrow:before {
@@ -199,8 +180,8 @@ body {
   margin: -10px 0 0 -10px;
   border-left: none;
   border-top: none;
-  border-right: 1px #fff solid;
-  border-bottom: 1px #fff solid;
+  border-right: 1px #000 solid;
+  border-bottom: 1px #000 solid;
   animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-name: arrow;
@@ -218,11 +199,10 @@ body {
 
 .content{
     width: 80%;
-    height: 80%;
+    height: 100%;
     margin: 0 auto;
+    padding-top: 7em;
 }
-
-
 
 #wakeup{
     border-radius: 50%;
@@ -230,3 +210,30 @@ body {
     height: 100%;
     object-fit: cover;
 }
+
+#third{
+    background-color: white;
+}
+
+#fourth{
+    background-color: antiquewhite;
+}
+
+.me{
+    width: 100%;
+}
+
+#fifth{
+    background-color: white;
+}
+
+.insta{
+    
+}
+
+.page-footer{
+    padding: 1rem;
+    background-color: #eeaa66
+}
+
+
